:100: Fixes for badges, alerts, var and padding on mobile

--- a/bones.css
+++ b/bones.css
@@ -53,8 +53,6 @@
 
   --sans-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  --mono-font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
-    'Courier New', monospace;
 
   --radius-small: 3px;
   --radius: 4px;
@@ -78,7 +76,7 @@ body {
   color: var(--grey-900);
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 24px;
+  padding: 0 16px;
 }
 
 /* Grid
@@ -105,7 +103,11 @@ h6 {
   font-weight: 500;
   max-width: 68ch;
 }
-
+h1 {
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+}
 p,
 blockquote,
 q,
@@ -114,7 +116,7 @@ li {
 }
 
 var {
-  font-family: var(--mono-font-family);
+  font-variant-numeric: tabular-nums;
   font-style: normal;
 }
 
@@ -186,7 +188,8 @@ samp {
   white-space: nowrap;
   border-radius: var(--radius-small);
   text-decoration: none;
-  font-family: var(--mono-font-family);
+  font-family: var(--sans-font-family);
+  font-variant-numeric: tabular-nums;
 }
 
 code {
@@ -220,7 +223,7 @@ pre {
 }
 pre > * {
   display: block;
-  padding: 10px 15px;
+  padding: 10px 12px;
   white-space: normal;
   border-left: 3px solid currentColor;
 }
